--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm prisma generate && next build",
+    "prisma": "prisma generate",
+    "build": "npm run prisma && next build",
     "start": "next start",
     "lint": "next lint"
   },
